# jessicarojas1.github.io

./: .gitignore  404.html  CENTRAL_AUDIT.md  CLAUDE.md  CRYPTOSIGNALS_NOTES.md  ENTERPRISE_SECURITY_REVIEW.md  Official Resume.docx  SECURITY_BASELINE.md  TENANT_ISOLATION.md  about.html  aboutme.html  admin.html  admin.php  aiml.html  analytics.js  barbershop.html  blog.html  budgetmanager.html  caclogin.html  careercenter.html  cmmc_controls.json  cmmc_l1_data.json  cmmc_l2_data.json  cmmc_l3_data.json  cmmidev3.html  cmmidev3.js  codebuilder.html  compliancetracker.html  compliancetracker.js  config.toml  consultant.css  consultant.html  consultant.js  contact.html  contact.php  cpp-projects.html  cryptosignals.html  cryptosignals.js  cyber.html  cybersecurity.html  (+62 more)
cpp/: CLAUDE.md  CMakeLists.txt  Dockerfile  Makefile  OPEN_ITEMS.md  README.md  render.yaml
cpp/aes-vault/: aes_vault.cpp
cpp/arinc429/: arinc429_decoder.cpp
cpp/cui-classifier/: cui_classifier.cpp
cpp/deployments/: AIRGAPPED.md  AWS.md  AZURE.md  KUBERNETES.md  LOCAL_DEVELOPMENT.md  SINGLE_LINUX_SERVER.md
cpp/docs/: ARCHITECTURE.md  DEPLOYMENT.md  DISASTER_RECOVERY.md  SECURITY.md
cpp/entropy-scanner/: entropy_scanner.cpp
cpp/gps-antispoofing/: gps_detector.cpp
cpp/log-correlator/: log_correlator.cpp
cpp/memory-scanner/: memory_scanner.cpp
cpp/mil-std-1553/: mil1553_sim.cpp
cpp/packet-analyzer/: packet_analyzer.cpp
cpp/rf-anomaly/: rf_anomaly.cpp
cpp/tests/: run_tests.sh
cpp/yara-lite/: yara_lite.cpp
cpp/zt-policy-engine/: zt_policy.cpp
sentinel-qms/backend/: .env.example  Dockerfile  IMPLEMENTATION_NOTES.md  README.md  alembic.ini  docker-entrypoint.sh  gunicorn.conf.py  pyproject.toml
sentinel-qms/backend/alembic/: env.py
sentinel-qms/backend/alembic/versions/: 0001_initial.py  0002_document_workflow.py  0003_comments.py  0004_org_settings.py  0005_branding_logo_text.py  0005_user_page_permissions.py  0006_user_permission_grants.py  0007_notification_settings.py  0008_sla_and_report_schedule.py  0009_exec_kpi_targets_coq_costs.py  0010_standards_mapping.py  0011_counterfeit_parts.py  0012_apqp_ppap.py  0013_counterfeit_ncr_link.py  0014_fod_program.py  0015_concessions.py  0016_scar_capa_link.py  0017_customer_contracts.py  0018_audit_program.py  0019_msa_studies.py  0020_kc_spc.py  0021_saved_views.py  0022_apqp_contract_link.py  0023_record_shares.py  0024_kc_owner.py  0025_user_permission_deny.py  0026_standards_authorship.py  0027_quality_objectives.py  0028_improvements.py  0029_customer_surveys.py  0030_fmea.py  0031_user_notification_prefs.py  0032_api_tokens.py  0033_webhooks.py  0034_refresh_tokens.py  0035_password_reset_tokens.py  0036_user_mfa.py  0037_access_token_denylist.py  0038_audit_user_agent.py  0039_document_acknowledgements.py  (+5 more)
sentinel-qms/backend/app/: __init__.py  dbinit.py  main.py  reset_admin.py  seed.py
sentinel-qms/backend/app/api/: __init__.py  deps.py
sentinel-qms/backend/app/core/: audit.py  config.py  cookies.py  database.py  entity_access.py  exceptions.py  http.py  iam.py  logging.py  middleware.py  net_guard.py  pages.py  permissions.py  rbac.py  security.py
sentinel-qms/backend/app/models/: __init__.py  api_token.py  apqp.py  audit_mgmt.py  audit_program.py  base.py  calibration.py  capa.py  change.py  comment.py  complaint.py  concession.py  counterfeit.py  customer.py  customer_satisfaction.py  document.py  fmea.py  fod.py  iam.py  improvement.py  inspection.py  lesson.py  mgmt_review.py  msa.py  nonconformance.py  password_reset.py  permission.py  quality_objective.py  record_share.py  refresh_token.py  retention.py  risk.py  saved_view.py  settings.py  sla.py  spc.py  standard.py  supplier.py  token_denylist.py  training.py  (+2 more)
sentinel-qms/backend/app/schemas/: __init__.py  analytics.py  api_token.py  apqp.py  attachment.py  audit_mgmt.py  audit_program.py  auth.py  calibration.py  capa.py  change.py  comment.py  common.py  complaint.py  concession.py  counterfeit.py  customer.py  customer_satisfaction.py  dashboard.py  document.py  fmea.py  fod.py  improvement.py  inspection.py  lesson.py  mgmt_review.py  msa.py  nonconformance.py  notification.py  (+13 more)
sentinel-qms/backend/scripts/: db-bootstrap.sh
sentinel-qms/backend/tests/: conftest.py  test_analytics_pareto.py  test_api_tokens.py  test_apqp.py  test_apqp_psw.py  test_audit_export.py  test_audit_programs.py  test_audit_user_agent.py  test_auth.py  test_cac.py  test_capa_effectiveness_due.py  test_capa_effectiveness_escalation.py  test_capa_five_whys.py  test_capa_workflow.py  test_comment_mentions.py  test_concessions.py  test_counterfeit.py  test_create_capa_from.py  test_customer_role.py  test_customer_satisfaction.py  test_customers.py  test_dashboard.py  test_department_filter.py  test_doc_acknowledge.py  test_doc_review_escalation.py  test_fmea.py  test_fod.py  test_iam_deny.py  test_improvements.py  test_lessons.py  test_mfa.py  test_mgmt_review_auto.py  test_mgmt_review_inputs.py  test_msa.py  test_new_module_notifications.py  test_nonconformance.py  test_notification_preferences.py  test_oidc.py  test_opportunity.py  test_optimistic_concurrency.py  (+30 more)
(+1918 files in other folders)
