[project]
name = "sentinel-qms-api"
version = "1.0.0"
description = "Sentinel QMS — Enterprise Quality Management System backend API"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Sentinel QMS Team" }]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "gunicorn>=22.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7.4",
    # Pin bcrypt to 4.0.x — passlib 1.7.4's bcrypt backend is incompatible with
    # bcrypt>=4.1, which can break password hashing/verification.
    "bcrypt>=4.0.1,<4.1",
    "python-multipart>=0.0.9",
    "email-validator>=2.1",
    "boto3>=1.34",
    "azure-storage-blob>=12.20",
    "python-json-logger>=2.0",
    # Branded PDF/report generation (pure-Python; Pillow ships manylinux wheels).
    "fpdf2>=2.7",
    "Pillow>=10.0",
    # SAML 2.0 SSO: XML-DSig verification (pure-Python over lxml + cryptography;
    # both ship manylinux wheels, so no system xmlsec build is required).
    "signxml>=4.0",
    # Optional shared rate-limit store (used only when REDIS_URL is set; the
    # limiter degrades to in-process when unavailable). redis>=5 ships asyncio.
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    # Pinned: ruff's lint rules and formatter output drift between releases,
    # which silently breaks the `ruff check` / `ruff format --check` CI gates.
    "ruff==0.15.18",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM"]
ignore = ["B008", "B904"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["app"]
omit = ["app/seed.py", "alembic/*"]
